--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-  <div class="banner wrapper">
+  <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
-    <div class="banner-content text-center">
-      <div>
+    <div class="banner-content text-center gutter-1-2">
+      <div class="max-length">
         <h1 class="yotta push-0">Space & Time Explorer Person</h1>
-        <p class="peta ">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <p class="tera ">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
